# moonshot4422

./: CMakeLists.txt  main.cpp  ms_func.c  ms_func.cpp  ms_func.h  raspi.cpp  takePicture  testcma.txt
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  msPicture
